--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".chapter2.TestActivity">
+    tools:context=".chapter2.IPC.TestActivity">
 
 </android.support.constraint.ConstraintLayout>
